--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <nav id="navbar" class="nav">
 
-            <a href="Index.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="Pages/Aboutme.html">About</a>
             <a href="Pages/Contact.html">Contact</a>
 
