--- a/Pages/Aboutme.html
+++ b/Pages/Aboutme.html
@@ -22,7 +22,7 @@
 
         <nav id="navbar" class="nav">
 
-            <a href="../Index.html">Home</a>
+            <a href="../index.html">Home</a>
             <a href="../Pages/Aboutme.html">About</a>
             <a href="../Pages/Contact.html">Contact</a>
 
